btn-primary + form new tool

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -37,7 +37,7 @@
 
         </div>
 
-        <div class="form-actions btn btn-primary">
+        <div class="form-actions btn btn-ghost">
           <%= f.button :submit, "Update" %>
         </div>
       <% end %>
