--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -4,6 +4,6 @@
     <%= f.input :date_begin, as: :date, html5: true %>
     <%= f.input :date_end, as: :date, html5: true %>
     <%= f.input :status, collection: Booking::STATUSES%>
-    <%= f.submit "Submit", class: "btn btn-primary" %>
+    <%= f.submit "Submit", class: "btn btn-ghost" %>
   <% end %>
 </div>
