--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -3,6 +3,6 @@
   <%= simple_form_for [@tool, @booking] do |f| %>
     <%= f.input :date_begin, as: :date, html5: true %>
     <%= f.input :date_end, as: :date, html5: true%>
-    <%= f.submit "Submit", class: "btn btn-primary" %>
+    <%= f.submit "Submit", class: "btn btn-ghost" %>
   <% end %>
 </div>
