--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,12 +40,12 @@
           <%= f.button :submit, "Update" %>
         </div>
       <% end %>
-
+      <br><br>
       <h3>Cancel my account</h3>
 
-      <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+      <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), class: "cancel-link", data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-      <%= link_to "Back", :back %>
+      <%= link_to "Back", :back, class: "cancel-link" %>
     </div>
   </div>
 </div>
