--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,8 +13,8 @@
 </div>
 
 <div class="page-wrapper">
-  <div class="d-flex justify-content-center m-4">
-    <h1>Most popular tools</h1>
+  <div class="d-flex justify-content-center m-2 text-uppercase">
+    <h2>MOST POPULAR TOOLS</h2>
   </div>
   <div class="cards-container">
       <% @tools.each do |tool| %>
