--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -10,6 +10,8 @@
   top: 0;
   margin-left: 10px;
   margin-right: 10px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 4px;
 }
 
 @media(max-width: 768px) {
