calendar fully operational

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -15,7 +15,24 @@
   transition: background 0.3s ease;
 }
 
+.meeting-proposed {
+  color: white;
+  padding: 8px 24px;
+  border-radius: 4px;
+  background: #1EDD88;
+  transition: background 0.3s ease;
+}
+
 .meeting:hover {
   background: #1BCB7F;
   color: white;
+}
+
+.selected {
+  background: white;
+  color: white;
+}
+
+.simple-calendar td:hover {
+  background: #1BCB7F;
 }
