--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -21,7 +21,7 @@
   <% date_range.each_slice(7) do |dates| %>
     <tr>
       <% dates.each do |date| %>
-        <%= content_tag :td, class: calendar.td_classes_for(date) do %>
+        <%= content_tag :td, :"data-action" => "click->calendar#input", :"data-calendar-date-param" => "#{date}", :"data-calendar-target" =>"tile#{date}", id:"tile#{date}", class: calendar.td_classes_for(date) do %>
           <% passed_block.call date.day, sorted_events.fetch(date, []) %>
         <% end %>
       <% end %>
