--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -10,9 +10,10 @@
 }
 
 .search-form-control .form-control {
-  height: 3.5rem;
+  height: 3 rem;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
   border: 1px solid #E7E7E7;
+  border-radius: 5px;
 }
 
 .search-form-control .form-control:focus {
@@ -22,8 +23,12 @@
 }
 
 .advanced-screen {
-  border-radius: 20px;
+  border-radius: 40px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   text-align: center;
-  padding: 20px;
+  padding: 10px;
+  background-color: rgba($color: $grey, $alpha: 1);
+  margin-bottom: 16px;
+  inset: -60px auto auto 5px !important;
+  width: 74vw;
 }
