--- a/app/assets/stylesheets/pages/_tool-show.scss
+++ b/app/assets/stylesheets/pages/_tool-show.scss
@@ -2,26 +2,28 @@
   background-color: rgba($color: white , $alpha: 0.7);
   border-radius: 8px;
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
-  text-align: center;
+  text-align: left;
+  padding: 10px;
+  margin-left: 16px;
+  height: 450px;
 }
 
-.tool-photo img {
-  width: 600px;
-  height: 370px;
+.booking-tool h2 {
+  padding: 5px;
+}
+
+.tool-items-img {
+  height: 450px;
+  width: 100%;
   border-radius: 8px;
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
   object-fit: cover;
 }
 
-.pictures-tool {
+.tool-items {
   display: flex;
 }
 
-.small-pics img {
-  width: 250px;
-  height: 150px;
-  object-fit: cover;
-  margin-bottom: 8px;
-  border-radius: 8px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
-}
+// .tool-buttons {
+//   display: flex;
+// }
