--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,7 +5,7 @@ $red: #C1121F;
 $blue: #003049;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #3c6e71;
+$green: #007200;
 $gray: #0a0a0a;
 $light-gray: #F4F4F4;
 $light: #fbfbf2;
