--- a/app/assets/stylesheets/components/_card-tool.scss
+++ b/app/assets/stylesheets/components/_card-tool.scss
@@ -53,6 +53,19 @@
   width: 40px;
 }
 
+.card-trip-category-icon {
+  position: absolute;
+  display:flex;
+  left: 16px;
+  top: -180px;
+  opacity: 0.9;
+  & i {
+  font-size: 40px;
+  text-align:center;
+  color: #007200;
+  margin:auto
+}}
+
 .cards-container a {
   text-decoration: none;
 }
