--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -16,7 +16,7 @@
           <h2 class="text-center"><%= @tool.name.capitalize %></h2>
           <h4><%= @tool.description %></h4>
           <p>Category: <%= @tool.category %></p>
-          <p>Price per day: <%= @tool.daily_price %> €</p>
+          <p>Price per day:</p> <p id="dailyprice"><%= @tool.daily_price %> €</p>
           <p>Condition: <%= @tool.condition %>/5</p>
         </div>
         <%= link_to 'Back to list', tools_path, class: "btn btn-ghost" %>
