finished with dashboard

--- a/app/assets/stylesheets/components/_card-tool.scss
+++ b/app/assets/stylesheets/components/_card-tool.scss
@@ -5,6 +5,9 @@
   height: 300px;
   color: $taupe;
   border-radius: 4px;
+  &:hover {
+    box-shadow: 0 0 30px rgba($taupe,0.5);
+  }
 }
 
 .card-trip > img {
