--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -11,6 +11,9 @@
   cursor: pointer;
   text-decoration: none;
   border-bottom: 4px solid transparent;
+  &:hover {
+    opacity: 0.9;
+  }
 }
 
 .tabs-underlined .tab-underlined.active {
