--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,23 +1,23 @@
 <div class="page-wrapper">
-  <h1 style = 'text-align: center; padding:10px'>Welcome <%=current_user.first_name%></h1>
+  <h2 style = 'text-align: center; padding:10px'><%=current_user.first_name.upcase %>'S DASHBOARD</h2>
 
   <div class="tab_wrapper" data-controller="switch-tab">
 
     <ul class="list-inline tabs-underlined" id="dashboard-tab">
       <li>
-        <h2>
+        <h3>
           <a href="" class="tab-underlined active" data-action="click->switch-tab#switch" data-switch-tab-target="tab" data-tab-name="bookings-user">My bookings</a>
-        </h2>
+        </h3>
       </li>
       <li>
-        <h2>
+        <h3>
         <a href="" class="tab-underlined" data-action="click->switch-tab#switch" data-switch-tab-target="tab" data-tab-name="bookings-owner">Bookings on my tools</a>
-        </h2>
+        </h3>
       </li>
       <li>
-        <h2>
+        <h3>
         <a href="" class="tab-underlined" data-action="click->switch-tab#switch" data-switch-tab-target="tab" data-tab-name="toolbox">My toolbox</a>
-        </h2>
+        </h3>
       </li>
     </ul>
 
@@ -89,6 +89,21 @@
         </div>
 
         <div class="cards-container d-none" id="your-toolbox" data-switch-tab-target="content" data-tab-name="toolbox">
+          <%= link_to new_tool_path do %>
+          <div class="card-trip">
+            <div class="plus">
+              <%= image_tag "Logo-plus.png" %>
+            </div>
+            <div class="card-trip-infos">
+              <div>
+                <h2>Add a new tool</h2>
+                <div class="text-description">
+                  <p>A new comer to your toolbox? Click here!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <% end %>
           <% @owner_tools.each do |tool| %>
             <div class="card-trip">
               <%= cl_image_tag tool.photo.key %>
